...
          },
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: "POS",
            tabBarIcon: ({ color, size }) => (
              <Ionicons name="cart" size={size} color={color} />
            ),
          }}
        />
        <Tabs.Screen
...
